--- a/index.html
+++ b/index.html
@@ -478,6 +478,8 @@
           <div class="large-15 medium-30 small-50">
             <h6>Diogo Lopes</h6>
             <img src="img/team/diogo_lopes.jpg" onmouseover="this.src='img/team/diogo_lopes.jpg'" onmouseout="this.src='img/team/diogo_lopes.jpg'" alt="">
+            <br>
+            <a href="https://www.facebook.com/diogo.lopes.18294" target="_blank"><i class="icon-facebook"></i></a>
           </div>
         </div>
         <div class="column-group gutters">
