--- a/index.html
+++ b/index.html
@@ -344,7 +344,9 @@
             <h6>Jessica Ribeiro</h6>
             <img src="img/team/jessica_ribeiro.jpg" onmouseover="this.src='img/team/jessica_ribeiro_sinfo.jpg'" onmouseout="this.src='img/team/jessica_ribeiro.jpg'" alt="">
             <br>
+            <a href="https://www.facebook.com/jessica.ribeiro.1426?ref=tn_tnmn" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://twitter.com/jessicafilipar" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="https://www.linkedin.com/pub/jessica-ribeiro/76/240/972" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Joana Fonseca</h6>
