--- a/index.html
+++ b/index.html
@@ -435,7 +435,9 @@
             <h6>Rodrigo Martins</h6>
             <img src="img/team/rodrigo_martins.jpg" onmouseover="this.src='img/team/rodrigo_martins_sinfo.jpg'" onmouseout="this.src='img/team/rodrigo_martins.jpg'" alt="">
             <br>
+            <a href="https://www.facebook.com/rodrigo.francamartins.3" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://twitter.com/RodrigoCFFM" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="https://www.linkedin.com/profile/view?id=312035243" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Adriana Domingos</h6>
