--- a/index.html
+++ b/index.html
@@ -313,12 +313,14 @@
             <h6>Jorge Palma</h6>
             <img src="img/team/jorge_palma.png" onmouseover="this.src='img/team/jorge_palma_sinfo.jpg'" onmouseout="this.src='img/team/jorge_palma.png'" alt="">
             <br>
+            <a href="mailto:jorge.palma@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="https://www.linkedin.com/profile/view?id=164367198" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Manuel Alves</h6>
             <img src="img/team/manuel_alves.jpg" onmouseover="this.src='img/team/manuel_alves_sinfo.jpg'" onmouseout="this.src='img/team/manuel_alves.jpg'" alt="">
             <br>
+            <a href="mailto:manuel.alves@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="http://twitter.com/_manuelalves" target="_blank"><i class="icon-twitter"></i></a>
             <a href="https://www.linkedin.com/profile/view?id=193501611" target="_blank"><i class="icon-linkedin"></i></a>
             <a href="http://github.com/manuelalves" target="_blank"><i class="icon-github"></i></a>
@@ -327,6 +329,7 @@
             <h6>Frederico Carvalho</h6>
             <img src="img/team/frederico_carvalho.jpg" onmouseover="this.src='img/team/frederico_carvalho_sinfo.jpg'" onmouseout="this.src='img/team/frederico_carvalho.jpg'" alt="">
             <br>
+            <a href="mailto:frederico.carvalho@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="https://www.facebook.com/fredericonc" target="_blank"><i class="icon-facebook"></i></a>
             <a href="https://www.linkedin.com/pub/frederico-nobre-de-carvalho/59/898/a94" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
@@ -334,6 +337,7 @@
             <h6>Cláudia Filipe</h6>
             <img src="img/team/claudia_filipe.png" onmouseover="this.src='img/team/claudia_filipe_sinfo.jpg'" onmouseout="this.src='img/team/claudia_filipe.png'" alt="">
             <br>
+            <a href="mailto:claudia.filipe@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="http://facebook.com/claudia.filipe.90" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://twitter.com/claudiasbf" target="_blank"><i class="icon-twitter"></i></a>
             <a href="http://pt.linkedin.com/pub/cláudia-beja-filipe/75/b06/1a4/" target="_blank"><i class="icon-linkedin"></i></a>
@@ -343,11 +347,14 @@
             <h6>Jessica Ribeiro</h6>
             <img src="img/team/jessica_ribeiro.jpg" onmouseover="this.src='img/team/jessica_ribeiro_sinfo.jpg'" onmouseout="this.src='img/team/jessica_ribeiro.jpg'" alt="">
             <br>
+            <a href="mailto:jessica.ribeiro@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="http://twitter.com/jessicafilipar" target="_blank"><i class="icon-twitter"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Joana Fonseca</h6>
             <img src="img/team/joana_fonseca.jpg" onmouseover="this.src='img/team/joana_fonseca_sinfo.jpg'" onmouseout="this.src='img/team/joana_fonseca.jpg'" alt="">
+            <br>
+            <a href="mailto:joana.fonseca@sinfo.org"><i class="icon-envelope"></i></a>
           </div>
         </div>
         <div class="column-group gutters">
@@ -358,17 +365,21 @@
             <h6>Mariana Paulo</h6>
             <img src="img/team/mariana_paulo.jpg" onmouseover="this.src='img/team/mariana_paulo_sinfo.jpg'" onmouseout="this.src='img/team/mariana_paulo.jpg'" alt="">
             <br>
+            <a href="mailto:mariana.paulo@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="http://facebook.com/marianafpaulo" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://www.linkedin.com/in/marianafpaulo" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Diogo Nicolau</h6>
             <img src="img/team/diogo_nicolau.jpg" onmouseover="this.src='img/team/diogo_nicolau_sinfo.jpg'" onmouseout="this.src='img/team/diogo_nicolau.jpg'" alt="">
+            <br>
+            <a href="mailto:diogo.nicolau@sinfo.org"><i class="icon-envelope"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Francisco Dias</h6>
             <img src="img/team/francisco_dias.jpg" onmouseover="this.src='img/team/francisco_dias_sinfo.jpg'" onmouseout="this.src='img/team/francisco_dias.jpg'" alt="">
             <br>
+            <a href="mailto:francisco.dias@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="https://www.facebook.com/xicombd" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://twitter.com/xicombd" target="_blank"><i class="icon-twitter"></i></a>
             <a href="http://linkedin.com/in/xicombd" target="_blank"><i class="icon-linkedin"></i></a>
@@ -378,6 +389,7 @@
             <h6>Gonçalo Sena</h6>
             <img src="img/team/goncalo_sena.jpg" onmouseover="this.src='img/team/goncalo_sena_sinfo.jpg'" onmouseout="this.src='img/team/goncalo_sena.jpg'" alt="">
             <br>
+            <a href="mailto:goncalo.sena@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="https://www.facebook.com/goncalosena90" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://twitter.com/goncalosena" target="_blank"><i class="icon-twitter"></i></a>
             <a href="http://lnkd.in/VmEatr" target="_blank"><i class="icon-linkedin"></i></a>
@@ -386,6 +398,7 @@
             <h6>João Barata</h6>
             <img src="img/team/joao_barata.jpg" onmouseover="this.src='img/team/joao_barata_sinfo.jpg'" onmouseout="this.src='img/team/joao_barata.jpg'" alt="">
             <br>
+            <a href="mailto:joao.barata@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="https://www.facebook.com/jmdbo" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://twitter.com/jmdbo" target="_blank"><i class="icon-twitter"></i></a>
             <a href="https://www.linkedin.com/in/jmdbo" target="_blank"><i class="icon-linkedin"></i></a>
@@ -394,6 +407,8 @@
           <div class="large-15 medium-30 small-50">
             <h6>Luis Riscado</h6>
             <img src="img/team/luis_riscado.jpg" onmouseover="this.src='img/team/luis_riscado_sinfo.jpg'" onmouseout="this.src='img/team/luis_riscado.jpg'" alt="">
+            <br>
+            <a href="mailto:@sinfo.org"><i class="icon-envelope"></i></a>
           </div>
         </div>        
         <div class="column-group gutters">
@@ -404,6 +419,7 @@
             <h6>Mike Duarte</h6>
             <img src="img/team/mike_duarte.jpg" onmouseover="this.src='img/team/mike_duarte_sinfo.jpg'" onmouseout="this.src='img/team/mike_duarte.jpg'" alt="">
             <br>
+            <a href="mailto:mike.duarte@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="https://www.facebook.com/mike.duarte.35" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://twitter.com/MikedDuarte" target="_blank"><i class="icon-twitter"></i></a>
             <a href="https://www.linkedin.com/profile/view?id=293893594" target="_blank"><i class="icon-linkedin"></i></a>
@@ -411,11 +427,14 @@
           <div class="large-15 medium-30 small-50">
             <h6>Manuel Piçarra</h6>
             <img src="img/team/manuel_picarra.png" onmouseover="this.src='img/team/manuel_picarra_sinfo.jpg'" onmouseout="this.src='img/team/manuel_picarra.png'" alt="">
+            <br>
+            <a href="mailto:manuel.picarra@sinfo.org"><i class="icon-envelope"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Pedro Saraiva</h6>
             <img src="img/team/pedro_saraiva.jpg" onmouseover="this.src='img/team/pedro_saraiva_sinfo.jpg'" onmouseout="this.src='img/team/pedro_saraiva.jpg'" alt="">
             <br>
+            <a href="mailto:pedro.saraiva@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="https://www.facebook.com/pedrogsaraiva" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://twitter.com/PedroGSaraiva" target="_blank"><i class="icon-twitter"></i></a>
             <a href="https://pt.linkedin.com/in/pedrogsaraiva/ " target="_blank"><i class="icon-linkedin"></i></a>
@@ -425,6 +444,7 @@
             <h6>Rafael Santos</h6>
             <img src="img/team/rafael_santos.jpg" onmouseover="this.src='img/team/rafael_santos_sinfo.jpg'" onmouseout="this.src='img/team/rafael_santos.jpg'" alt="">
             <br>
+            <a href="mailto:rafael.santos@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="http://twitter.com/rafaelhrsantos" target="_blank"><i class="icon-twitter"></i></a>
             <a href="http://pt.linkedin.com/pub/rafael-santos/58/84b/494/" target="_blank"><i class="icon-linkedin"></i></a>
             <a href="http://github.com/rafaelhrsantos" target="_blank"><i class="icon-github"></i></a>
@@ -433,12 +453,14 @@
             <h6>Rodrigo Martins</h6>
             <img src="img/team/rodrigo_martins.jpg" onmouseover="this.src='img/team/rodrigo_martins_sinfo.jpg'" onmouseout="this.src='img/team/rodrigo_martins.jpg'" alt="">
             <br>
+            <a href="mailto:rodrigo.martins@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="http://twitter.com/RodrigoCFFM" target="_blank"><i class="icon-twitter"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Adriana Domingos</h6>
             <img src="img/team/adriana_domingos.jpg" onmouseover="this.src='img/team/adriana_domingos.jpg'" onmouseout="this.src='img/team/adriana_domingos.jpg'" alt="">
             <br>
+            <a href="mailto:adriana.domingos@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="http://facebook.com/adrianadomingos" target="_blank"><i class="icon-facebook"></i></a>
           </div>
         </div>
@@ -450,33 +472,42 @@
             <h6>Carina Antunes</h6>
             <img src="img/team/carina_antunes.jpg" onmouseover="this.src='img/team/carina_antunes.jpg'" onmouseout="this.src='img/team/carina_antunes.jpg'" alt="">
             <br>
+            <a href="mailto:carina.antunes@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="https://www.facebook.com/carinadeoliveiraantunes" target="_blank"><i class="icon-facebook"></i></a>
             <a href="https://pt.linkedin.com/in/carinadeoliveiraantunes  " target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Mafalda Antunes</h6>
             <img src="img/team/mafalda_antunes.jpg" onmouseover="this.src='img/team/mafalda_antunes.jpg'" onmouseout="this.src='img/team/mafalda_antunes.jpg'" alt="">
+            <br>
+            <a href="mailto:mafalda.antunes@sinfo.org"><i class="icon-envelope"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Mafalda Magro</h6>
             <img src="img/team/mafalda_magro.jpg" onmouseover="this.src='img/team/mafalda_magro.jpg'" onmouseout="this.src='img/team/mafalda_magro.jpg'" alt="">
+            <br>
+            <a href="mailto:mafalda.magro@sinfo.org"><i class="icon-envelope"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Yuliya Plotka</h6>
             <img src="img/team/yuliya_plotka.jpg" onmouseover="this.src='img/team/yuliya_plotka.jpg'" onmouseout="this.src='img/team/yuliya_plotka.jpg'" alt="">
             <br>
+            <a href="mailto:yuliya.plotka@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="http://twitter.com/juliaplotka" target="_blank"><i class="icon-twitter"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>André Domingues</h6>
             <img src="img/team/andre_domingues.png" onmouseover="this.src='img/team/andre_domingues.png'" onmouseout="this.src='img/team/andre_domingues.png'" alt="">
             <br>
+            <a href="mailto:andre.domingues@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="http://facebook.com/voxivoid" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://instagram.com/voxivoid" target="_blank"><i class="icon-instagram"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Diogo Lopes</h6>
             <img src="img/team/diogo_lopes.jpg" onmouseover="this.src='img/team/diogo_lopes.jpg'" onmouseout="this.src='img/team/diogo_lopes.jpg'" alt="">
+            <br>
+            <a href="mailto:diogo.lopes@sinfo.org"><i class="icon-envelope"></i></a>
           </div>
         </div>
         <div class="column-group gutters">
@@ -487,12 +518,14 @@
             <h6>Diogo Pais</h6>
             <img src="img/team/diogo_pais.png" onmouseover="this.src='img/team/diogo_pais.png'" onmouseout="this.src='img/team/diogo_pais.png'" alt="">
             <br>
+            <a href="mailto:diogo.pais@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="http://facebook.com/diogo.pais.7165" target="_blank"><i class="icon-facebook"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Francisco Gonçalves</h6>
             <img src="img/team/francisco_goncalves.png" onmouseover="this.src='img/team/francisco_goncalves.png'" onmouseout="this.src='img/team/francisco_goncalves.png'" alt="">
             <br>
+            <a href="mailto:francisco.goncalves@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="http://facebook.com/franciscocgoncalves" target="_blank"><i class="icon-facebook"></i></a>
             <a href="http://twitter.com/franciscocsg" target="_blank"><i class="icon-twitter"></i></a>
             <a href="http://lnkd.in/b8Bgj-G" target="_blank"><i class="icon-linkedin"></i></a>
@@ -502,6 +535,7 @@
             <h6>João Antunes</h6>
             <img src="img/team/joao_antunes.jpg" onmouseover="this.src='img/team/joao_antunes.jpg'" onmouseout="this.src='img/team/joao_antunes.jpg'" alt="">
             <br>
+            <a href="mailto:joao.antunes@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="https://www.facebook.com/joao.antunes.752" target="_blank"><i class="icon-facebook"></i></a>
             <a href="https://pt.linkedin.com/in/jgantunes" target="_blank"><i class="icon-linkedin"></i></a>
             <a href="https://github.com/JGAntunes" target="_blank"><i class="icon-github"></i></a>
@@ -510,6 +544,7 @@
             <h6>João Chitas</h6>
             <img src="img/team/joao_chitas.jpg" onmouseover="this.src='img/team/joao_chitas.jpg'" onmouseout="this.src='img/team/joao_chitas.jpg'" alt="">
             <br>
+            <a href="mailto:joao.chitas@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="https://www.facebook.com/joaopachitas" target="_blank"><i class="icon-facebook"></i></a>
             <a href="https://twitter.com/O_Tretas" target="_blank"><i class="icon-twitter"></i></a>
             <a href="http://pt.linkedin.com/in/joaopachitas" target="_blank"><i class="icon-linkedin"></i></a>
@@ -518,12 +553,15 @@
             <h6>Nuno Pires</h6>
             <img src="img/team/nuno_pires.png" onmouseover="this.src='img/team/nuno_pires.png'" onmouseout="this.src='img/team/nuno_pires.png'" alt="">
             <br>
+            <a href="mailto:nuno.pires@sinfo.org"><i class="icon-envelope"></i></a>
             <a href="https://www.facebook.com/nuno.pires.182" target="_blank"><i class="icon-facebook"></i></a>
             <a href="https://www.linkedin.com/pub/nuno-pires/91/176/42" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Tiago Ramos</h6>
             <img src="img/team/tiago_ramos.png" onmouseover="this.src='img/team/tiago_ramos.png'" onmouseout="this.src='img/team/tiago_ramos.png'" alt="">
+            <br>
+            <a href="mailto:tiago.ramos@sinfo.org"><i class="icon-envelope"></i></a>
           </div>
         </div>
         <div class="column-group gutters">
