--- a/sponsor.html
+++ b/sponsor.html
@@ -129,10 +129,10 @@
 							<table class="ink-table bordered alternating">
 								<thead>
 									<tr>
-										<th class="pale-blue">Description</th>
-										<th class="pale-blue">Bronze</th>
-										<th class="pale-blue">Silver</th>
-										<th class="pale-blue">Gold</th>
+										<th class="pale-gray">Description</th>
+										<th class="pale-gray">Bronze</th>
+										<th class="pale-gray">Silver</th>
+										<th class="pale-gray">Gold</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -249,7 +249,7 @@
 							<small>*Choose just one: either a presentation or 2 days of stand.<br><b>Add the current VAT rate to the values above.</b></small>
 						</div>
 
-						<div id="infobox" class="all-55 ink-label pale-blue">
+						<div id="infobox" class="all-55 ink-label pale-gray">
 							<div id="keynote-info" class="info">
 								<h3>Keynote Sponsor</h3>
 								<p>
@@ -440,7 +440,7 @@
 
 					<div class="ink-grid bottom-space">
 						<div class="column-group push-center">
-							<div class="all-25 ink-label pale-blue right-space">
+							<div class="all-25 ink-label pale-gray right-space">
 								<ul>
 									<li>Logo in our site</li>
 									<li>Logo in our folders</li>
@@ -450,7 +450,7 @@
 									<li>Logo in the placemats</li>
 								</ul>
 							</div>
-							<div class="all-25 ink-label pale-blue right-space">
+							<div class="all-25 ink-label pale-gray right-space">
 								<ul>
 									<li>Workshop</li>
 									<li>Presentation</li>
@@ -460,7 +460,7 @@
 									<li>Innovation Awards sponsorship</li>
 								</ul>
 							</div>
-							<div class="all-25 ink-label pale-blue">
+							<div class="all-25 ink-label pale-gray">
 								<ul>
 									<li>1 day with stand</li>
 									<li>2 days with stand</li>
