added link to the sponsor page and possible mobile compatibility patch

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li class="title">
             <a class="logoPlaceholder push-left" href="#" title="SINFO"><img src="img/logotext.png"></a>
               <button class="toggle" data-target="#topbar_menu"><span class="fa fa-reorder"></span></button>
-          </li>           
+          </li>
         </ul>
 
         <ul class="menu vertical flat black hide-all" id="topbar_menu">
@@ -127,7 +127,7 @@
       <div class="opacidade">
         <h1><a href="#news" title="news">Keep updated!</a></h1>
         <div class="description">
-          SINFO organizes and collaborates in dozens of events throughout the year. 
+          SINFO organizes and collaborates in dozens of events throughout the year.
           <br>Subscribe and make sure not to lose any of it!
         </div>
       </div>
@@ -136,8 +136,8 @@
     <div class="ink-grid text-section">
       <div class="column-group gutters">
         <div class="all-100 tiny-100 justify-text">
-          <h1>Latest news</h1>   
-        </div>       
+          <h1>Latest news</h1>
+        </div>
       </div>
       <div class="column-group gutters">
         <div class="all-60 medium-50 small-100 tiny-100 justify-text">
@@ -275,7 +275,7 @@
         <h1><a href="#sponsors" title="Sponsor us!">Sponsor us</a></h1>
       <div class="description">
         Meet your potential future employees, from a college with excellent national and international renown.<br>
-        <a class="transparent-button" href="mailto:geral@sinfo.org">Get in touch!</a></div>
+        <a class="transparent-button" href="sponsor.html">Get in touch!</a></div>
       </div>
     </div>
 
@@ -424,7 +424,7 @@
           <br>
           <a href="mailto:@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
-      </div>        
+      </div>
       <div class="column-group gutters">
         <div class="all-5 hide-medium hide-small">
           <!-- spacer -->
