--- a/sponsor.html
+++ b/sponsor.html
@@ -104,7 +104,7 @@
 			<div id="description" class="column-group gutters">
 				<div class="all-100">
 					<h2>Description</h2>
-					<p>In case you are not familiar with us, we invite you to visit our <a href="http://www.sinfo.org/apresentacao/apresentacao.html">event presentation page</a> page explaining the several elements of our event. You can also visit the <a href="http://xx.sinfo.org/en">XX SINFO website</a>, the last year edition.</p>
+					<p>In case you are not familiar with us, we invite you to visit our <a href="http://www.sinfo.org/">homepage</a> presenting the several elements of our event. You can also visit the <a href="http://xxi.sinfo.org/">XXI SINFO website</a>, the 2014 edition.</p>
 				</div>
 			</div>
 			<div id="reasons" class="column-group gutters">
