--- a/sponsor.html
+++ b/sponsor.html
@@ -123,7 +123,7 @@
 					<p>The Gold package is an exclusive. That means it provides maximum visibility in the event and is awarded to the highest bidder, with a bidding base of € 3,500.</p>
 
 					<div class="column-group push-center bottom-space">
-						<div class="all-40 right-space">
+						<div class="all-40 medium-100 small-100 tiny-100 right-space">
 							<table class="ink-table bordered alternating">
 								<thead>
 									<tr>
@@ -247,7 +247,7 @@
 							<small>*Choose just one: either a presentation or 2 days of stand.<br><b>Add the current VAT rate to the values above.</b></small>
 						</div>
 
-						<div id="infobox" class="all-55 ink-label pale-gray">
+						<div id="infobox" class="all-55 medium-100 small-100 tiny-100 ink-label pale-gray">
 							<div id="keynote-info" class="info">
 								<h3>Keynote Sponsor</h3>
 								<p>
