--- a/sponsor.html
+++ b/sponsor.html
@@ -438,7 +438,7 @@
 
 					<div class="ink-grid bottom-space">
 						<div class="column-group push-center">
-							<div class="all-25 ink-label pale-gray right-space">
+							<div class="all-30 all-40 small-100 tiny-100 ink-label pale-gray right-space bottom-space">
 								<ul>
 									<li>Logo in our site</li>
 									<li>Logo in our folders</li>
@@ -448,7 +448,7 @@
 									<li>Logo in the placemats</li>
 								</ul>
 							</div>
-							<div class="all-25 ink-label pale-gray right-space">
+							<div class="all-30 all-40 small-100 tiny-100 ink-label pale-gray right-space bottom-space">
 								<ul>
 									<li>Workshop</li>
 									<li>Presentation</li>
@@ -458,7 +458,7 @@
 									<li>Innovation Awards sponsorship</li>
 								</ul>
 							</div>
-							<div class="all-25 ink-label pale-gray">
+							<div class="all-30 all-40 small-100 tiny-100 ink-label pale-gray right-space bottom-space">
 								<ul>
 									<li>1 day with stand</li>
 									<li>2 days with stand</li>
