--- a/index.html
+++ b/index.html
@@ -369,6 +369,8 @@
           <img src="img/team/joana_fonseca.jpg" onmouseover="this.src='img/team/joana_fonseca_sinfo.jpg'" onmouseout="this.src='img/team/joana_fonseca.jpg'" alt="">
           <br>
           <a href="mailto:joana.fonseca@sinfo.org"><i class="fa fa-envelope"></i></a>
+          <a href="https://www.facebook.com/joana.fonseca.399" target="_blank"><i class="fa fa-facebook"></i></a>
+          <a href="https://pt.linkedin.com/pub/joana-fonseca/41/264/792" target="_blank"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
       <div class="column-group gutters">
