--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <div class="description">
           Learn amazing things with the very best on our hands-on workshops.
 
-          <p class="note" style="font-size:10px; margin-top:20px" target="_blank"><a href="https://www.flickr.com/photos/cwaring/sets/72157642004346284/" target="_blank">Photo</a> by <a href="https://twitter.com/cwaring" target="_blank">Chris Waring</a> featuring <a href="https://twitter.com/_alanshaw" target="_blank">Alan Shaw</a> and <a href="https://twitter.com/olizilla" target="_blank">Oli Evans</a> at the <a href="https://github.com/nodeschool/discussions/issues/93#issuecomment-37015159">Nodeschool Workshop!</a>!
+          <p class="note" style="font-size:10px; margin-top:20px" target="_blank"><a href="https://www.flickr.com/photos/cwaring/sets/72157642004346284/" target="_blank">Photo</a> by <a href="https://twitter.com/cwaring" target="_blank">Chris Waring</a> featuring <a href="https://twitter.com/_alanshaw" target="_blank">Alan Shaw</a> and <a href="https://twitter.com/olizilla" target="_blank">Oli Evans</a> at the <a href="https://github.com/nodeschool/discussions/issues/93#issuecomment-37015159">Nodeschool Workshop</a>!</p>
         </div>
       </div>
     </div>
