yuliya and antunes

--- a/index.html
+++ b/index.html
@@ -514,6 +514,8 @@
           <br>
           <a href="mailto:yuliya.plotka@sinfo.org"><i class="fa fa-envelope"></i></a>
           <a href="http://twitter.com/juliaplotka" target="_blank"><i class="fa fa-twitter"></i></a>
+          <a href="http://linkedin.com/in/yuliyaplotka" target="_blank"><i class="fa fa-linkedin"></i></a>
+          <a href="http://github.com/plotka" target="_blank"><i class="fa fa-github"></i></a>
         </div>
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>André Domingues</h6>
@@ -558,6 +560,7 @@
           <br>
           <a href="mailto:joao.antunes@sinfo.org"><i class="fa fa-envelope"></i></a>
           <a href="https://www.facebook.com/joao.antunes.752" target="_blank"><i class="fa fa-facebook"></i></a>
+          <a href="http://twitter.com/jgantunes" target="_blank"><i class="fa fa-twitter"></i></a>
           <a href="https://pt.linkedin.com/in/jgantunes" target="_blank"><i class="fa fa-linkedin"></i></a>
           <a href="https://github.com/JGAntunes" target="_blank"><i class="fa fa-github"></i></a>
         </div>
