Video Editing Workshop

--- a/index.html
+++ b/index.html
@@ -141,10 +141,12 @@
       </div>
       <div class="column-group gutters">
         <div class="all-60 medium-50 small-100 tiny-100 justify-text">
-          <span class="note">March 30th, 2014</span>
-          <h3>Come with SINFO to ENEI 2014</h3>
-          <p>Come with us to Encontro Nacional de Estudantes de Informática 2014. <br>It will happen in Aveiro on April 10-14.
-          Find out more <a href="https://www.facebook.com/events/274251866068428/">here</a>.</p>
+          <span class="note">May 30th, 2014</span>
+          <h3>Video Editing Workshop</h3>
+          <p>
+            Do you want to learn how to create an amazing video? One that becomes famous or viral? <br>
+            SINFO brings you the perfect Workshop! <br>
+            Get your ticket <a href="https://ti.to/sinfo/ws-video/">here</a>.</p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
           <!-- Begin MailChimp Signup Form -->
