--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
           <a href="mailto:diogo.pais@sinfo.org"><i class="fa fa-envelope"></i></a>
           <a href="https://www.facebook.com/diogo.pais.7165" target="_blank"><i class="fa fa-facebook"></i></a>
           <a href="https://www.twitter.com/MakayPT" target="_blank"><i class="fa fa-twitter"></i></a>
-          <a href="https://www.linkedin.com/pub/diogo-pais/98/90a/86" target="_blank"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/diogopais" target="_blank"><i class="fa fa-linkedin"></i></a>
           <a href="https://www.github.com/Makay11" target="_blank"><i class="fa fa-github"></i></a>
         </div>
         <div class="all-15 medium-30 small-50 tiny-50">
